@@ -1,0 +1,58 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!--
+    Fibaro FGT-001
+    https://products.z-wavealliance.org/products/2586
+    config based on https://manuals.fibaro.com/content/manuals/en/FGT-001/FGT-001-EN-T-v1.0.pdf
+    -->
+    <!-- Thermostat -->
+    <CommandClass id="64" name="COMMAND_CLASS_THERMOSTAT_MODE">
+        <Value type="list" genre="user" instance="1" index="0" label="Mode" units="" verify_changes="true" read_only="false" write_only="false" min="0" max="255" value="0">
+            <Item label="Off" value="0"/>
+            <Item label="Heat" value="1"/>
+            <Item label="Manual Valve Control" value="31"/>
+        </Value>
+        <SupportedModes>
+            <Mode index="0" label="Off"/>
+            <Mode index="1" label="Heat"/>
+            <Mode index="31" label="Manual Valve Control"/>
+        </SupportedModes>
+    </CommandClass>
+
+    <CommandClass id="67" name="COMMAND_CLASS_THERMOSTAT_SETPOINT" version="1" request_flags="4" create_vars="true" base="0">
+        <Instance index="1"/>
+        <Value type="decimal" genre="user" instance="1" index="1" label="Heating" units="C" read_only="false" verify_changes="true" write_only="false" min="16" max="24" value="20"/>
+    </CommandClass>
+
+    <!-- Configuration -->
+    <CommandClass id="112">
+        <Value type="int" genre="config" instance="1" index="1" label="Override Schedule duration" min="10" max="10000" value="240">
+            <Help>This parameter determines duration of Override Schedule after turn- ing the knob while normal schedule is active (set by Schedule CC).</Help>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="2" label="Additional functions" value="1" size="4">
+            <Help>This parameter allows to enable di erent additional functions of the device.</Help>
+            <Item label="Enable Open Window Detector" value="1"/>
+            <Item label="Enable fast Open Window Detector" value="2"/>
+            <Item label="Increase receiver sensitivity" value="4"/>
+            <Item label="Enabled LED indications when controlling remotely" value="8"/>
+            <Item label="Protect from setting Full ON and Full OFF mode by turning the knob manually" value="16"/>
+        </Value>
+        <Value type="list" genre="config" instance="1" index="3" label="Additional functions status" value="0" size="4" read-only="true">
+            <Help>This parameter allows to enable di erent additional functions of the device.</Help>
+            <Item label="None" value="0"/>
+            <Item label="Optional temperature sensor connected and operational" value="1"/>
+            <Item label="Open window detected" value="2"/>
+        </Value>
+    </CommandClass>
+
+    <!-- Map endpoints to instances -->
+    <CommandClass id="96" mapping="endpoints"/>
+
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="1">
+            <Group index="1" max_associations="1" label="Lifeline"/>
+        </Associations>
+    </CommandClass>
+</Product>
