@@ -203,6 +203,7 @@ Version 1.5
  - Add Dome Leak Sensor (Nechry)
  - Add Dome Mouser (Nechry)
  - Add Steinel IS140 from Karhujarvi (Nechry)
+ - Add Fibaro FGT-001 - The Heat Controller Radiator Thermostat (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
